# HMC6343

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
example/: hmc6343_example.cpp
include/: hmc6343.hpp
ros/: CMakeLists.txt  package.xml
ros/include/: hmc6343_ros.hpp
ros/launch/: hmc6343.launch
ros/src/: hmc6343_ros.cpp  hmc6343_ros_main.cpp
src/: hmc6343.cpp  i2c.cpp
utilities/: i2c.hpp  register.hpp
