<?xml version="1.0"?>
<package format="2">

  <name>hmc6343_ros</name>
  <version>0.0.0</version>
  <description>hmc6343_ros</description>
  <maintainer email="example@example.com">duckstarr</maintainer>
  <license>LICENSE</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

</package>
